# tyled

./: .gitignore  BEAM_ABILITY_DECKBUILDING.md  CLAUDE.md  Cargo.toml  DECKBUILDING.md  LICENSE  MIGRATION_0.19.md  README.md  index.html  tyled.js
.cargo/: config.toml
.github/workflows/: release.yml
.zed/: debug.json  tasks.json
assets/: HP.tsx  Hud.tsx  Hud1.tsx  Hud2.tsx  Plates.tsx  atlas.aseprite  atlas.tsx  atlas1.aseprite  atlas1.tsx  atlas2.aseprite  claim-blue-horizontal.aseprite  claimed-tiles.aseprite  font.aseprite  game_config.ron  grid Tiles Sheet.tsx  grid_tiles.pxo  grid_tiles.tsx  grid_tiles2.pxo  ground.aseprite  ground.tsx  health-bar-1.aseprite  hp.aseprite  hud.aseprite  hud.tmx  hud.tsx  hud1.aseprite  hud2.aseprite  hud2.tmx  level0.tmx  level1.tmx  level2.tmx  palette.aseprite  palette1.aseprite  palette3.aseprite  palette4.aseprite  palette5.aseprite  palette6.aseprite  palette7.aseprite  palette8.aseprite  palette9.aseprite  (+12 more)
assets/rules/: __automapping.tmx  automapping.tmx
backlog/: config.yml
backlog/completed/: task-10 - Claim-and-visualize-claimed-tile.md  task-7 - Beam-firing-event.md  task-8 - Beam-iteration-logic.md  task-9 - Handle-edge-cases.md
backlog/docs/: doc-1 - 000-Game-description.md  doc-1 - Game-description.md  doc-10 - 008-Effects-plugin.md  doc-11 - 009-Damage-plugin.md  doc-11 - 009-HUD-plugin.md  doc-12 - 010-Abilities-plugin.md  doc-13 - 011-Claim-plugin.md  doc-14 - 012-HUD-plugin.md  doc-15 - 013-Round-plugin.md  doc-16 - 014-Overlay-plugin.md  doc-16 - 014-Round-intro.md  doc-17 - 015-Text-plugin.md  doc-18 - 016-Outcome-plugin.md  doc-18 - 016-Round-outcome.md  doc-19 - 017-Config-plugin.md  doc-2 - 002-Input-plugin.md  doc-2 - Systems.md  doc-20 - 018-Bot-plugin.md  doc-21 - 019-Telemetry-plugin.md  doc-3 - 001-Levels-plugin.md  doc-3 - 001-Maps-plugin.md  doc-4 - 003-Movements-plugin.md  doc-5 - 004-Animations-plugin.md  doc-6 - 005-Camera-plugin.md  doc-7 - 006-Beam-plugin.md  doc-8 - 007-Claim-plugin.md  doc-9 - 000-Plugin-message-relationships.md
backlog/milestones/: m-0 - project-foundation.md  m-1 - claim-tiles-with-beam.md  m-3 - player-damage-from-opponent-tiles.md  m-4 - beam-hit-damage-and-knockback.md  m-5 - parry-loop-and-beam-escalation.md
backlog/tasks/: task-1 - Create-a-top-down-2D-tile-based-test-level.md  task-10 - Claim-and-visualize-claimed-tile.md  task-2 - Implement-tile-grid-system.md  task-3 - Add-two-playable-characters.md  task-4 - Implement-character-controller.md  task-5 - Basic-collision-with-level-boundaries.md  task-6 - Basic-camera-setup.md  task-7 - Beam-firing-event.md  task-8 - Beam-iteration-logic.md  task-9 - Handle-edge-cases.md
src/: lib.rs  main.rs  player.rs
src/components/: abilities.rs  beam.rs  (+17 more)
(+32 files in other folders)
