[package]
name = "tyled"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d", "dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.36.0"
bevy_ecs_ldtk = "0.14"
bevy_ecs_tiled = { version = "0.11.2", features = ["debug", "user_properties"] }
bevy_spritesheet_animation = "6.1"
bevy_tweening = "0.15"
leafwing-input-manager = {version = "0.20", features = ["timing"]}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
