[package]
name = "tyled"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_ecs_tiled = { version = "0.11.2", features = ["user_properties"] }
bevy_smooth_pixel_camera = "0.4.1"
bevy_spritesheet_animation = "6.1"
bevy_tweening = "0.15"
leafwing-input-manager = { version = "0.20", features = ["timing"] }
rand = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
