[package]
name = "tyled"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/file_watcher", "dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["2d"] }
bevy-inspector-egui = { version = "0.37.0", optional = true }
# BLOCKED: no Bevy 0.19 release yet (latest 0.12.0 targets bevy 0.18 + bevy_ecs_tilemap 0.18).
# Bump to the first 0.19-compatible version at flip time. See MIGRATION_0.19.md.
bevy_ecs_tiled = { version = "0.11.2", features = ["user_properties"] }
# BLOCKED: no Bevy 0.19 release yet (0.4.1 targets bevy 0.18.1). Bump at flip time.
bevy_smooth_pixel_camera = "0.4.1"
bevy_spritesheet_animation = "7.0"
bevy_tweening = "0.16"
leafwing-input-manager = { version = "0.21", features = ["timing"] }
rand = "0.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
